--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         <hr>
         
 
-        <script src="./scripts.js"></script>
+        <script src="./js/scripts.js"></script>
     </body>
 </html>
