--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>OpenClassrooms</title>
         <meta name="Description" content=""/>
+        <link rel="icon" href="data:,">
         <meta name="Keywords" content=""/>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
