--- a/listener.html
+++ b/listener.html
@@ -4,6 +4,7 @@
         <title>OpenClassrooms</title>
         <meta name="Description" content=""/>
         <meta name="Keywords" content=""/>
+        <link rel="icon" href="data:,">
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="fadilxcoder" />
