--- a/ajax.html
+++ b/ajax.html
@@ -17,6 +17,14 @@
         <pre id="ajx-resp">
         </pre>
         <hr>
+        
+        <form id="form">
+            <label>Saisissez une valeur <input type="text" id="value" value="FX-941"/></label><br />
+            <input type="submit" value="Envoyer" id="submit-btn"/>
+        </form><br>
+        <div id="result"></div>
+        <hr>
+        
         <script src="./js/ajax.js"></script>
     </body>
 </html>
